test_scores/negative_dimers/features/Q93034.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q93034.pkl.xz